# contextrouter

./: .cursorrules  .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  contextrouter-fulldoc.md  pyproject.toml  router.yaml.example
.github/workflows/: ci.yml  publish.yml  security.yml
docs/: NER.md
examples/: 01_basic_agent.py  02_custom_connector.py  03_standalone_retrieval.py  04_custom_graph_tracing.py  05_custom_errors.py  README.md  custom_graph.py  dispatcher_agent.py  dispatcher_grpc_client.py  dispatcher_redis_memory.py  env.example  models.toml.example  ner_usage.py  settings.toml.example  test_multimodal.py
examples/plugins/: README.md  custom_agent.py  custom_connector.py
scripts/: check_architecture.py  clean_registrations.py
src/contextrouter/: .cursorrules  __init__.py  __main__.py
src/contextrouter/api/: __init__.py
src/contextrouter/cli/: __main__.py  app.py  rag.py
src/contextrouter/cli/ingest/: __init__.py  common.py  export.py  index.py  ontology.py  persona.py  preprocess.py  run.py  structure.py
src/contextrouter/core/: __init__.py  agent_config_cache.py  brain_token.py  exceptions.py  flow_manager.py  interfaces.py  memory.py  plugins.py  registry.py  state.py  tokens.py  types.py
src/contextrouter/core/config/: __init__.py  base.py  ingestion.py  main.py  models.py  paths.py  providers.py  security.py
src/contextrouter/cortex/: __init__.py  llm.py  runtime_context.py  state.py
src/contextrouter/cortex/callbacks/: tool_handler.py  trace_collector.py
src/contextrouter/cortex/checkpointing/: __init__.py  redis_saver.py
src/contextrouter/cortex/graphs/: README.md  __init__.py  brain.py  commerce.py  config_resolution.py  dispatcher.py  gardener.py  lexicon.py  matcher.py  matching.py  overlord.py  rag_ingestion.py  rag_retrieval.py  secure_node.py
src/contextrouter/cortex/nodes/: retrieval.py  utils.py
src/contextrouter/cortex/queue/: __init__.py  enrichment_queue.py
src/contextrouter/cortex/runners/: __init__.py  chat.py  commerce.py  dispatcher.py  ingestion.py
src/contextrouter/cortex/services/: __init__.py  cache.py  dispatcher.py  graph.py
src/contextrouter/cortex/subagents/: orchestrator.py  prompt_generator.py  spawner.py
src/contextrouter/cortex/utils/: __init__.py  (+2 more)
src/contextrouter/manifest/: __init__.py
src/contextrouter/modules/: grpc.py
src/contextrouter/service/: __init__.py  decorators.py  dispatcher_service.py  helpers.py  interceptors.py  payloads.py  security.py  server.py  shield_check.py  shield_client.py  stream_executors.py  tool_factory.py
src/contextrouter/utils/: retry.py
src/contextunity/router/: .cursorrules  __init__.py  langchain_boundaries.py
stubs/duckdb/: __init__.pyi
stubs/google/cloud/: discoveryengine_v1.pyi
stubs/langchain_core/tools/: __init__.pyi
tests/: conftest.py  test_agent_config_cache.py  test_interceptors.py  test_local_factory.py  test_runtime_context.py  test_secure_tool.py  test_tenant_scope_narrowing.py  test_tool_tenant_isolation.py  test_trace_callable.py
tests/integration/: test_redis_checkpoint_saver_roundtrip.py  test_registration_redis_roundtrip.py  test_security_tools_grpc.py  test_shield_client_grpc.py  test_stream_agent_trace_integration.py
tests/manifest/: test_introspect_registrations.py  test_register_manifest_foreign_project.py  test_register_manifest_hash_stream_secret.py  test_registration_push.py  test_registration_rollback.py
tests/models/: test_base_model.py  test_boundary_common.py  test_extra_providers.py  test_model_registry.py  test_providers.py  test_retry_policy.py
tests/unit/: test_agent_wrapper_contract.py  test_astream_tracer_replay_errors.py  test_astream_tracer_replay_uuid.py  test_brain_admin_tools.py  test_brain_token.py  test_compiler_audit_backlog.py  test_config_env_contract.py  test_dispatcher_isolation.py  test_dispatcher_metadata_parity.py  test_dispatcher_service.py  test_exceptions_contract.py  test_execute_node.py  test_execution_helpers.py  test_fallback_logic.py  test_file_connector_boundary.py  test_flow_manager.py  test_graph_registration.py  test_graph_service.py  test_intent_node.py  test_intersect_tenant_with_project.py  test_introspection_contract.py  test_langchain_boundaries.py  test_langfuse_policy.py  test_log_execution_trace_stream.py  test_model_registry_litellm.py  test_multimodal_types.py  test_ner_transformer.py  test_no_direct_env.py  test_observability_prompt_versions.py  test_ontology_stage.py  test_platform_ingest_security.py  test_plugins.py  test_postgres_store.py  test_privacy_security_integration.py  test_redis_memory_tenant.py  test_registration_auth.py  test_registration_default_graph.py  test_registration_tools.py  test_retrieval_pipeline.py  test_secure_tool_fail_closed.py  (+18 more)
tests/unit/cortex/: test_brain_executors.py  test_builder_aliases.py  test_compiler_builder.py  test_config_resolver.py  test_cycle_detection.py  test_dispatcher_agent.py  test_dispatcher_max_iterations.py  test_dispatcher_security.py  test_dispatcher_tool_resolution.py  test_fanout_compiler.py  test_intent_analyzer.py  test_llm_invocation_privacy.py  test_manifest_validation.py  test_memory_injection.py  test_multi_graph_manifest.py  test_node_executors.py  test_persistence_mixin.py  test_pii_utils.py  test_pipeline_toggles.py  test_platform_dispatch.py  test_platform_registry.py  test_platform_tools_brain.py  test_platform_tools_content.py  test_platform_tools_rlm.py  test_platform_tools_router.py  test_platform_tools_service_runtime.py  test_platform_tools_services.py  test_rag_citations.py  test_rag_graph_compilation.py  test_rag_models.py  test_redis_checkpoint_guards.py  test_registration_template.py  test_secure_node.py  test_security_hardening.py  test_sql_analytics.py  test_state_routing.py  test_synthesizer.py  test_telemetry_helpers.py  test_template_builder.py  test_template_loader.py  (+2 more)
tests/unit/privacy/: __init__.py  test_anonymizer.py  test_masking.py
tests/unit/retrieval/: test_background_tasks.py
tests/unit/tools/: test_sql.py
(+674 files in other folders)
